src-tauri/abilities-runtime/tests/trybuild/boundary/super_qualified_helper_wrapper_fails.stderr
error: ability bodies cannot bypass the ServiceContext boundary; detected: std::fs::write
  --> tests/trybuild/boundary/super_qualified_helper_wrapper_fails.rs:45:22
   |
45 |         pub async fn super_qualified_helper_wrapper_boundary(
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
